--- a/safari-bug.html
+++ b/safari-bug.html
@@ -11,8 +11,8 @@
     const el = document.getElementById('some');
     el.appendChild(sandbox);
     const onClose = () => {
-        // setTimeout(() => el.innerHTML = '',0); // Костыле фикс бага
-        el.innerHTML = ''; // Крэшит сафари с открытыми дев тулзами
+        el.innerHTML = ''; // Crashes Safari (Tested in 11.1 (12605.1.33.1.3)) with opened dev tools
+        // setTimeout(() => el.innerHTML = '',0); // Dirty workaround
     }
     sandbox.contentDocument.open();
     sandbox.contentWindow.addEventListener('message', onClose);
